ui: fix double scrollbar in propkeyeditor

--- a/ui/cap-react/src/antd/App/App.less
+++ b/ui/cap-react/src/antd/App/App.less
@@ -27,7 +27,10 @@
   height: 100%;
 }
 
-
 .hoverPointer:hover{
   cursor: pointer;
+}
+
+.scrollableTabs .ant-tabs-content-holder {
+  overflow-y: scroll;
 }
